--- a/static/bulletin.htm
+++ b/static/bulletin.htm
@@ -5,18 +5,27 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Vote</title>
 
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/epoch/0.8.2/css/epoch.min.css"/>
+  <link rel="stylesheet" href="bulletin.css">
+
   <script src="/socket.io/socket.io.js"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script>
     window.jQuery || document.write('<script src="/jquery-1.11.3.min.js"><\/script>')
   </script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/epoch/0.8.2/js/epoch.min.js"></script>
   <script src="/bulletin.js"></script>
 </head>
 <body>
-<div>
-  <div>
-    <p>Votes: <span id="votes">0</span></p>
-    <p>Users: <span id="users">0</span></p>
+<div id="contents">
+  <div id="chart" class="epoch category10"></div>
+
+  <div id="infos">
+    <div class="info"><i class="fa fa-2x fa-thumbs-o-down"></i><br><span id="good">0</span></div>
+    <div class="info"><i class="fa fa-2x fa-user"></i><br><span id="user">0</span></div>
+    <div class="info"><i class="fa fa-2x fa-thumbs-o-up"></i><br><span id="poor">0</span></div>
   </div>
 </div>
 </body>
