good / poor の順序ミスってた

--- a/static/bulletin.htm
+++ b/static/bulletin.htm
@@ -23,9 +23,9 @@
   <div id="chart" class="epoch category10"></div>
 
   <div id="infos">
-    <div class="info"><i class="fa fa-2x fa-thumbs-o-down"></i><br><span id="good">0</span></div>
+    <div class="info"><i class="fa fa-2x fa-thumbs-o-down"></i><br><span id="poor">0</span></div>
     <div class="info"><i class="fa fa-2x fa-user"></i><br><span id="user">0</span></div>
-    <div class="info"><i class="fa fa-2x fa-thumbs-o-up"></i><br><span id="poor">0</span></div>
+    <div class="info"><i class="fa fa-2x fa-thumbs-o-up"></i><br><span id="good">0</span></div>
   </div>
 </div>
 </body>
